# claude_ragchatbot

./: .env.example  .flake8  .gitignore  IMPROVEMENTS_AND_EXTENSIONS.md  README.md  frontend-changes.md  pyproject.toml
backend/: ai_generator.py  app.py  config.py  llm_providers.py  models.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py
backend/tests/api/: __init__.py  test_endpoints.py
backend/tests/diagnostic/: test_error_scenarios.py
backend/tests/integration/: test_sequential_rag_queries.py
backend/tests/unit/: test_ai_generator.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality-fix.sh  quality.sh
